--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,19 @@
 version: 1.0.{Build}
+image: WMF 5
 environment:
   NugetAPIKey:
     secure: CFshnX6P8eJYeRG6QjcVVDku87J8EpZdxJwrfTEcA27F6zXmlmXXlbx04oTLzPti
+install:
+- ps: ./scripts/install.ps1
 build_script:
-- ps: ./build.ps1
+- ps: ./scripts/build.ps1
 test_script:
-- ps: ./test.ps1
+- ps: ./scripts/test.ps1
 deploy_script:
-- ps: ./deploy.ps1
+- ps: ./scripts/deploy.ps1
+notifications:
+  - provider: Slack
+    incoming_webhook: RyTQLUdYQDF2xrVLobZe9tdfTIijZmOEUOelCYgbQcwMsbS7jRrfydsL4a8din4Sxm34nT+Q9L8vytrFQ3GlQnJXniM76CCCwB1rhMnVoHY=
+    on_build_success: true
+    on_build_failure: true
+    on_build_status_changed: true
