--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,3 +23,5 @@ notifications:
     on_build_success: true
     on_build_failure: true
     on_build_status_changed: true
+on_success:
+  - ps: ./scripts/onSuccess.ps1
